# custos-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  REFACTOR.md  ROADMAP.md
demo/: demo_main.sh  demo_optional.sh
demo/secure-program/programs/secure-program/src/: lib.rs
demo/uninitialized-simple/programs/uninitialized-simple/src/: lib.rs
demo/vulnerable-program/programs/vulnerable-program/src/: lib.rs
demo/wormhole-pattern/programs/wormhole-pattern/src/: lib.rs
src/: chain.rs  helius.rs  main.rs  parser.rs  quicknode.rs  report.rs  safe_patterns.rs  scanner.rs  scoring.rs  suppression.rs  taint.rs  test_findings.rs  utils.rs
src/checks/: access.rs  anchor.rs  logging.rs  mod.rs  pii.rs  secrets.rs
tests/: verify_with_fixtures.rs
tests/fixtures/: README.md  helius_addressTransactions.json  helius_enhancedTransactions.json  helius_searchAssets.json  helius_tokenMetadata.json  quicknode_getAccountInfo.json  quicknode_getMultipleAccounts.json  quicknode_getProgramAccounts.json  quicknode_getSignaturesForAddress.json  quicknode_getTokenAccountsByOwner.json  quicknode_getTransaction.json
