[package]
name = "custos"
version = "0.1.0"
edition = "2021"
authors = ["Solana Privacy Hackathon Team"]
description = "Privacy-focused static analysis CLI for Solana/Anchor programs"
license = "MIT"
repository = "https://github.com/solana-privacy/custos"
keywords = ["solana", "privacy", "audit", "blockchain", "anchor"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# Async runtime & HTTP client (for Helius API)
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# File system
walkdir = "2.4"
tempfile = "3.8"

# Pattern matching
regex = "1.10"
once_cell = "1.19"

# Lightweight AST parsing (struct extraction only)
syn = { version = "2.0", features = ["full", "parsing"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base64 decoding
base64 = "0.22"

# Error handling
anyhow = "1.0"

# Output formatting
colored = "2.0"

# Time
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
wiremock = "0.5"

[[bin]]
name = "custos"
path = "src/main.rs"
